--- a/package.json
+++ b/package.json
@@ -51,27 +51,26 @@
   },
   "homepage": "https://github.com/tensult/role-acl#readme",
   "devDependencies": {
-    "@types/jasmine": "^3.3.0",
-    "@types/lodash.clonedeep": "^4.5.6",
-    "@types/matcher": "^1.1.0",
-    "@types/node": "^9.6.55",
-    "handlebars": "^4.7.4",
+    "@types/jasmine": "^4.3.1",
+    "@types/lodash.clonedeep": "^4.5.7",
+    "@types/node": "^16.18.7",
+    "handlebars": "^4.7.7",
     "istanbul": "^1.1.0-alpha.1",
-    "jasmine": "^3.3.0",
-    "js-yaml": ">=3.13.1",
-    "minimist": ">=1.2.2",
-    "mkdirp": "^0.5.1",
+    "jasmine": "^4.5.0",
+    "js-yaml": "^4.1.0",
+    "minimist": "^1.2.7",
+    "mkdirp": "^1.0.4",
     "ncp": "^2.0.0",
-    "rimraf": "^2.6.1",
-    "ts-node": "^8.8.2",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.1"
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0"
   },
   "dependencies": {
-    "jsonpath-plus": "^0.18.0",
+    "jsonpath-plus": "^7.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.flattendeep": "^4.4.0",
-    "matcher": "^1.0.0",
-    "notation": "^1.3.5"
+    "matcher": "^3.0.0",
+    "notation": "^1.3.6"
   }
 }
