--- a/package.json
+++ b/package.json
@@ -51,23 +51,23 @@
   },
   "homepage": "https://github.com/tensult/role-acl#readme",
   "devDependencies": {
-    "@types/jasmine": "^4.3.1",
-    "@types/lodash.clonedeep": "^4.5.7",
-    "@types/node": "^16.18.7",
-    "handlebars": "^4.7.7",
-    "istanbul": "^1.1.0-alpha.1",
-    "jasmine": "^4.5.0",
+    "@types/jasmine": "^5.1.4",
+    "@types/lodash.clonedeep": "^4.5.9",
+    "@types/node": "^20.4.0",
+    "handlebars": "^4.7.8",
+    "istanbul": "^0.4.5",
+    "jasmine": "^5.1.0",
     "js-yaml": "^4.1.0",
-    "minimist": "^1.2.7",
-    "mkdirp": "^1.0.4",
+    "minimist": "^1.2.8",
+    "mkdirp": "^3.0.1",
     "ncp": "^2.0.0",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "webpack": "^5.75.0"
+    "rimraf": "^5.0.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0"
   },
   "dependencies": {
-    "jsonpath-plus": "^7.2.0",
+    "jsonpath-plus": "^9.0.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.flattendeep": "^4.4.0",
     "matcher": "^3.0.0",
