--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "role-acl",
-  "version": "4.5.4",
+  "version": "4.5.7",
   "description": "Role, Attribute and Condition based Access Control for Node.js",
   "main": "./index.js",
   "directories": {
@@ -71,6 +71,6 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.flattendeep": "^4.4.0",
     "matcher": "^3.0.0",
-    "notation": "^1.3.6"
+    "notation": "1.3.6"
   }
 }
